# california-housing-price-predictor

./: .gitignore  Dockerfile  Dockerfile.dashboard  MODEL_CARD.md  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  app.py
api/templates/: index.html
app/: dashboard_app.py
docs/: architecture.md  experimentation.md
src/chpp/: data.py  evaluate.py  features.py  predict.py  train.py
src/chpp/data_sources/: __init__.py  fred.py  geo.py
src/chpp/evaluation/: __init__.py  comparison.py  feature_importance.py
src/chpp/models/: __init__.py  ensemble.py
src/chpp/pipelines/: __init__.py  preprocess.py  tuning.py
tests/: test_api.py  test_smoke.py  test_trends.py
